update main architecture, and add logout

--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -5,19 +5,23 @@
   // border: 1px solid lightgray;
 }
 
-html, body {
+html {
   height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
 }
 
-#app {
-  height: 100%;
-  width: 100%;
-  font-family: 'Avenir', Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
+body {
+  position: relative;
+  min-height: 100%;
+  #app {
+    height: 100%;
+    width: 100%;
+    font-family: 'Avenir', Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-align: center;
+    color: #2c3e50;
+  }
 }
